--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
+        fetch-depth: 0
 
     - name: Setup Python
       uses: actions/setup-python@v4
