--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: _docs/html/
+        path: build/html/
 
   deploy:
     needs: build
