--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-sphinx-book-theme
-sphinxcontrib-bibtex
-sphinx-proof
-sphinx-togglebutton
-sphinx-last-updated-by-git
-sphinx-sitemap
-sphinxext-opengraph
+sphinx-book-theme==1.1.3
+sphinxcontrib-bibtex==2.6.2
+sphinx-proof==0.1.3
+sphinx-togglebutton==0.3.2
+sphinx-last-updated-by-git==0.3.7
+sphinx-sitemap==2.6.0
+sphinxext-opengraph==0.9.1
